MODON MRE BPDEV/force-app/main/default/objects/Currency_Conversion_Rate__c/Currency_Conversion_Rate__c.object-meta.xml
<CustomObject>
    <description>This object will be used by Modon Egypt team to handle multi currency.</description>
    <label>Currency Conversion Rate</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Currency Conversion Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Conversion Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>