MODON MRE BPDEV/force-app/main/default/objects/Currency_Conversion_Rate__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>Conversion rate for converting Source Currency to Target Currency.</description>
    <inlineHelpText>Source currency to Target currency conversion rate</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>