MODON MRE BPDEV/force-app/main/default/objects/Currency_Conversion_Rate__c/fields/Inverse_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Conversion_Rate__c</fullName>
    <description>This is inverse conversion rate synced from Oracle into Salesforce.</description>
    <label>Inverse Conversion Rate</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>