MODON MRE BPDEV/force-app/main/default/objects/Currency_Conversion_Rate__c/fields/Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Date__c</fullName>
    <description>This is the date of conversion rate of particular day.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Date</label>
    <type>Date</type>
</CustomField>