MODON MRE BPDEV/force-app/main/default/objects/Currency_Conversion_Rate__c/fields/Target_Currency__c.field-meta.xml
<CustomField>
    <fullName>Target_Currency__c</fullName>
    <description>This is the targert currency which will indecate the currency in which the amount is converted to</description>
    <label>Target Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EGP</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>SAR</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>